# bpsci

./: .gitignore  README.md  core.md  index.md  pyproject.toml  windows_install_command_creator.ipynb
.github/workflows/: codeql-analysis.yml
bpsci/: __init__.py  core.py  utils.py
docs/: .buildinfo  blender.md  bpsci.html  core.md  genindex.html  index.html  index.md  modules.html  objects.inv  py-modindex.html  quickstart.html  search.html  searchindex.js
docs/_sources/: bpsci.rst.txt  index.rst.txt  quickstart.rst.txt
docs/_static/: documentation_options.js
docs/core/: dyn_obj.md  dyn_vec.md  index.md  init_anim.md  ref_frame.md  refframe.md
docs/source/: conf.py  index.rst  quickstart.rst
docs/utils/: bpy_obj.md  erase_others.md  index.md
docs_make/source/: conf.py  index.rst  modules.rst
examples/: README.md
examples/gallileo/: gallileo.csv  gallileo_blend.py
examples/orbital_intercept/: orb_int_data.csv  orbital_intercept_blend.py
examples/python scripts/: gallileo_blend.py  orbital_intercept_blend.py
html/: genindex.html  index.html
tests/: test_bpsci.py
