[tool.poetry]
name = "bpsci"
version = "0.1.33"
description = ""
authors = ["Jerry Varghese <varghese.jerryj@gmail.com>"]
include = ["assets/*"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.18.4"
scipy = "^1.7.3"
pandas = "^1.3.4"


[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
